[project]
name = "odoo-bringout-oca-ocb-portal_rating"
version = "16.0.0"
description = "Portal Rating - Odoo addon"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-ocb-portal>=16.0.0",
    "odoo-bringout-oca-ocb-rating>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/odoo-bringout-oca-ocb-portal_rating"
repository = "https://github.com/bringout/odoo-bringout-oca-ocb-portal_rating"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["portal_rating"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
